tests/unit-fail/j087a.ref
Error: UB-CEE4
Description: Referring to an object outside of its lifetime.
Type: Undefined behavior.
See also: C11 sec. 6.2.4:2, J.2:1 item 9
  at __va_inc(j087a.c:6)
  at f(j087a.c:6)
  at main(j087a.c:11)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
